outputs_20260331-105410-8a3c83b2/codegen/production/build_logs/compiler_stderr.log
In file included from /tmp/tdd_build_wokj4jay/src/egtm_atom_adc_tmadc_multiple_channels.c:21:
/tmp/tdd_build_wokj4jay/include/IfxEgtm_Pwm.h:113:5: error: unknown type name ‘IfxEgtm_Pwm_FastShutoffConfig’
  113 |     IfxEgtm_Pwm_FastShutoffConfig *fastShutOff;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_wokj4jay/src/egtm_atom_adc_tmadc_multiple_channels.c: In function ‘interruptEgtmAtom’:
/tmp/tdd_build_wokj4jay/src/egtm_atom_adc_tmadc_multiple_channels.c:87:5: error: implicit declaration of function ‘IfxPort_togglePin’ [-Wimplicit-function-declaration]
   87 |     IfxPort_togglePin(LED);
      |     ^~~~~~~~~~~~~~~~~
/tmp/tdd_build_wokj4jay/src/egtm_atom_adc_tmadc_multiple_channels.c: In function ‘initEgtmAtom3phInv’:
/tmp/tdd_build_wokj4jay/src/egtm_atom_adc_tmadc_multiple_channels.c:48:47: error: ‘IfxEgtm_ATOM0_0_TOUT64_P20_8_OUT’ undeclared (first use in this function)
   48 | #define PHASE_U_HS                          (&IfxEgtm_ATOM0_0_TOUT64_P20_8_OUT)
      |                                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_wokj4jay/src/egtm_atom_adc_tmadc_multiple_channels.c:136:63: note: in expansion of macro ‘PHASE_U_HS’
  136 |     output[0].pin                    = (IfxEgtm_Pwm_ToutMap *)PHASE_U_HS;
      |                                                               ^~~~~~~~~~
/tmp/tdd_build_wokj4jay/src/egtm_atom_adc_tmadc_multiple_channels.c:48:47: note: each undeclared identifier is reported only once for each function it appears in
   48 | #define PHASE_U_HS                          (&IfxEgtm_ATOM0_0_TOUT64_P20_8_OUT)
      |                                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_wokj4jay/src/egtm_atom_adc_tmadc_multiple_channels.c:136:63: note: in expansion of macro ‘PHASE_U_HS’
  136 |     output[0].pin                    = (IfxEgtm_Pwm_ToutMap *)PHASE_U_HS;
      |                                                               ^~~~~~~~~~
/tmp/tdd_build_wokj4jay/src/egtm_atom_adc_tmadc_multiple_channels.c:49:47: error: ‘IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT’ undeclared (first use in this function)
   49 | #define PHASE_U_LS                          (&IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT)
      |                                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_wokj4jay/src/egtm_atom_adc_tmadc_multiple_channels.c:137:63: note: in expansion of macro ‘PHASE_U_LS’
  137 |     output[0].complementaryPin       = (IfxEgtm_Pwm_ToutMap *)PHASE_U_LS;
      |                                                               ^~~~~~~~~~
/tmp/tdd_build_wokj4jay/src/egtm_atom_adc_tmadc_multiple_channels.c:50:47: error: ‘IfxEgtm_ATOM0_1_TOUT66_P20_10_OUT’ undeclared (first use in this function)
   50 | #define PHASE_V_HS                          (&IfxEgtm_ATOM0_1_TOUT66_P20_10_OUT)
      |                                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_wokj4jay/src/egtm_atom_adc_tmadc_multiple_channels.c:144:63: note: in expansion of macro ‘PHASE_V_HS’
  144 |     output[1].pin                    = (IfxEgtm_Pwm_ToutMap *)PHASE_V_HS;
      |                                                               ^~~~~~~~~~
/tmp/tdd_build_wokj4jay/src/egtm_atom_adc_tmadc_multiple_channels.c:51:47: error: ‘IfxEgtm_ATOM0_1N_TOUT67_P20_11_OUT’ undeclared (first use in this function)
   51 | #define PHASE_V_LS                          (&IfxEgtm_ATOM0_1N_TOUT67_P20_11_OUT)
      |                                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_wokj4jay/src/egtm_atom_adc_tmadc_multiple_channels.c:145:63: note: in expansion of macro ‘PHASE_V_LS’
  145 |     output[1].complementaryPin       = (IfxEgtm_Pwm_ToutMap *)PHASE_V_LS;
      |                                                               ^~~~~~~~~~
/tmp/tdd_build_wokj4jay/src/egtm_atom_adc_tmadc_multiple_channels.c:52:47: error: ‘IfxEgtm_ATOM0_2_TOUT68_P20_12_OUT’ undeclared (first use in this function)
   52 | #define PHASE_W_HS                          (&IfxEgtm_ATOM0_2_TOUT68_P20_12_OUT)
      |                                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_wokj4jay/src/egtm_atom_adc_tmadc_multiple_channels.c:152:63: note: in expansion of macro ‘PHASE_W_HS’
  152 |     output[2].pin                    = (IfxEgtm_Pwm_ToutMap *)PHASE_W_HS;
      |                                                               ^~~~~~~~~~
/tmp/tdd_build_wokj4jay/src/egtm_atom_adc_tmadc_multiple_channels.c:53:47: error: ‘IfxEgtm_ATOM0_2N_TOUT69_P20_13_OUT’ undeclared (first use in this function)
   53 | #define PHASE_W_LS                          (&IfxEgtm_ATOM0_2N_TOUT69_P20_13_OUT)
      |                                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_wokj4jay/src/egtm_atom_adc_tmadc_multiple_channels.c:153:63: note: in expansion of macro ‘PHASE_W_LS’
  153 |     output[2].complementaryPin       = (IfxEgtm_Pwm_ToutMap *)PHASE_W_LS;
      |                                                               ^~~~~~~~~~
/tmp/tdd_build_wokj4jay/src/egtm_atom_adc_tmadc_multiple_channels.c:169:24: error: assignment to ‘IfxEgtm_Pwm_callBack’ {aka ‘void (*)(void)’} from incompatible pointer type ‘void (*)(void *)’ [-Wincompatible-pointer-types]
  169 |     irqCfg.periodEvent = IfxEgtm_periodEventFunction;
      |                        ^
/tmp/tdd_build_wokj4jay/src/egtm_atom_adc_tmadc_multiple_channels.c: In function ‘initEgtmAtomAdcTrigger’:
/tmp/tdd_build_wokj4jay/src/egtm_atom_adc_tmadc_multiple_channels.c:54:47: error: ‘IfxEgtm_ATOM0_3_TOUT22_P33_0_OUT’ undeclared (first use in this function)
   54 | #define ADC_TRIG_PIN                        (&IfxEgtm_ATOM0_3_TOUT22_P33_0_OUT)
      |                                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_wokj4jay/src/egtm_atom_adc_tmadc_multiple_channels.c:265:63: note: in expansion of macro ‘ADC_TRIG_PIN’
  265 |     output[0].pin                    = (IfxEgtm_Pwm_ToutMap *)ADC_TRIG_PIN;
      |                                                               ^~~~~~~~~~~~

In file included from /tmp/tdd_build_wokj4jay/mocks/mock_egtm_atom_adc_tmadc_multiple_channels.c:5:
/tmp/tdd_build_wokj4jay/include/IfxEgtm_Pwm.h:113:5: error: unknown type name ‘IfxEgtm_Pwm_FastShutoffConfig’
  113 |     IfxEgtm_Pwm_FastShutoffConfig *fastShutOff;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
